--- a/GrommetChallenge.ipynb
+++ b/GrommetChallenge.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![enter image description here](https://developer.hpe.com/img/hpe-dev-logo-mark-anim.svg?1580730675069 \"HPE DEV Hack Shack\")\n",
+    "![hpedev.io](https://developer.hpe.com/img/hpe-dev-logo-mark-anim.svg?1580730675069 \"HPE DEV Hack Shack\")\n",
     "\n",
     "\n",
     "# Welcome to the DISCOVER Hack Shack Grommet Challenge\n",
@@ -13,130 +13,75 @@
     "\n",
     "We recommend you attend the following Discover Hack Shack workshops before attempting this challenge:\n",
     "\n",
-    "1. Git 101\n",
-    "2. Streamline app development with open source Grommet\n",
+    "1. [Hack Shack Workshop: Git 101](../WKSHP-GIT101/0-ReadmeFirst.ipynb)\n",
+    "2. [Hack Shack Workshop: Streamline app development with open source Grommet](../WKSHP-Grommet/0-ReadmeFirst.ipynb)\n",
     "\n",
-    "If you have not, make sure you leverage the notebooks provided in your Jupyter environement for reference. \n",
+    "Also, make sure you leverage the notebooks provided in your Jupyter account environment as reference material.\n",
     "\n",
-    "## Fork the Container Challenge Repo\n",
+    "> Please note, your account session will only be allocated for a 4-hour time slot, so make sure you register only when you have enough time available to take the challenge.\n",
     "\n",
-    "We will leverage Git to distribute and collect responses for this challenge. This means that your reponse will be delivered via a Pull Request on the challenge notebook. Do achieve this, you first need to fork the challenge repository at:\n",
+    "# Challenge description\n",
     "\n",
-    "https://github.com/HPEDevCom/GrommetChallenge.git\n",
-    "\n",
-    "## Clone the repo locally \n",
-    "\n",
-    "Once you have a copy of the repo in your own GitHub account, you will have to clone a local copy into your Jupyter environement. To do this start a Terminal session from the Jupyter Launcher and use the Git CLI. \n",
-    "\n",
-    "## Work on your challenge\n",
-    "\n",
-    "Once the content of the repo is downloaded in your Jupyter account, open the notebook in Jupyter. It's now time for you to do real work :-)\n",
-    "\n",
-    "## Racing against the clock\n",
-    "\n",
-    "Remember that you are working against the clock here. You have 4 hours after we provided you access to the Jyputer account. If your time is running out, make sure you commit and push your changes to your copy of the repo in order to avoid loosing any work.\n",
+    "A new mission awaits! In this challenge, you will take on a UX designer persona and show your creative side using Grommet to design your own little web app UI. You will start with the Grommet Designer, generate code from your design, push that code to GitHub, and finally deploy the app on Netlify. Beginner through expert designers and developers are all welcome. This challenge is all about unleashing your creativity!\n",
     "\n",
     "# Step 1: Build a sample front-end application\n",
     "\n",
-    "The first step to accomplish this challenge is to create a sample front-end application, and for this we would like you to use Grommet. Keep it simple, all we really need is a sample app with a web interface. The Grommet workshop is your best point of reference at this point, if you need help.\n",
+    "The first step to accomplish this challenge is to create a web front-end application, and for this we would like you to use Grommet Designer. Keep it simple yet slick, show your design prowess. The [Hack Shack Workshop: Streamline app development with open source Grommet](../WKSHP-Grommet/1-WKSHP-Introduction.ipynb) is your best point of reference  for this step, if you need help.\n",
     "\n",
-    "## Quizz question 1:\n",
+    "## Quiz question 1:\n",
     "\n",
-    "What is the URL of the Grommet designer: `Your response goes here`\n",
+    "What is the URL of the Grommet Designer?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your response goes here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "# Step 2: Run your web application locally\n",
     "\n",
-    "The next step will consist in making your sample application run locally on your machine. Again this is described in great details in the Grommet Workshop, so don't hesitate to take a look in the corresponding notebook.\n",
+    "The next step of the challenge is to make this application work locally on your laptop. The Grommet Designer online instructions and the [Lab 3 of the Grommet Workshop](../WKSHP-Grommet/3-WKSHP-PrepareEnvironment.ipynb) are your best source of information for accomplishing this. \n",
     "\n",
-    "# Step 3: Containerize your application\n",
+    "# Step 3: Share your application in GitHub\n",
     "\n",
-    "The next step will consist in making your application run locally in a container. This is the trickiest piece as it's not described in any workshop. We will guide you through it. This step also requires that you have Docker installed on your machine. If this is not the case, you can follow [these instructions](https://docs.docker.com/engine/install/) to get Docker started on your machine.\n",
-    "\n",
-    "Once Docker runs, you can use the following `Dockerfile` (also provided in the repo) to package your application in a container.\n",
-    "\n",
-    "````\n",
-    "FROM node\n",
+    "In this step, you will use the local version of your application to create a local git repo and then upload it into your GitHub account. The [Hack Shack Workshop: Git 101](../WKSHP-GIT101/1-WKSHP-GIT-Basics.ipynb) and [the last part of Lab 3 of the Grommet Workshop](../WKSHP-Grommet/3-WKSHP-PrepareEnvironment.ipynb) are your best sources of information for accomplishing this.\n",
     " \n",
-    "RUN mkdir /app\n",
-    "# set working directory\n",
-    "WORKDIR /app\n",
-    " \n",
-    "# add `/app/node_modules/.bin` to $PATH\n",
-    "ENV PATH /app/node_modules/.bin:$PATH\n",
-    " \n",
-    "# install and cache app dependencies\n",
-    "COPY package.json /app/package.json\n",
-    " \n",
-    "RUN npm install --silent\n",
-    " \n",
-    "COPY . .\n",
-    "# Application port\n",
-    "EXPOSE 3000\n",
-    " \n",
-    "# Remote debugging port\n",
-    "EXPOSE 9229\n",
-    " \n",
-    "# start app\n",
-    "CMD [\"npm\", \"start\"]\n",
-    "````\n",
+    "## Quiz question 2:\n",
     "\n",
-    "Using this `Dockerfile`, create a container image for your application. Once the image is created, test your application, by launching a container from that image and connecting to the application.\n",
+    "What is the URL of your application source code repo on GitHub?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your response goes here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Step 4: Set up CI/CD pipeline for your application\n",
     "\n",
-    "# Step 4: Upload container in DockerHub\n",
+    "This is the final step of your challenge. We will ask you to use [Netlifly](https://netlifly.com) to host your application so we can judge it. For this you will need to setup an account on [Netlifly](https://netlifly.com) (this is free) and a CI/CD configuration so that [Netlifly](https://netlifly.com) automatically builds your web site from your GitHub repo created in Step 3. Use [Lab4 of the Grommet Workshop](../WKSHP-Grommet/4-WKSHP-DeploytoNetlify.ipynb) for details on how to accomplish this. Once this is all in place, not only will your application be up and running (try changing the domain name to obtain a friendly URL), but it will automatically update everytime you commit changes to it in GitHub. \n",
     "\n",
-    "Once you have tested your container image built using the provided Dockerfile (and docker build), you will need to tag your image (with docker tag) to prepare it for upload  on your DockerHub account. If you do not have a DockerHub account yet, [create one](https://hub.docker.com/). Once you are logged in your DockerHub account, create an empty repository for your container image. Then upload your container image to your account (using docker push).\n",
+    "> Note: You can use this feature as an opportunity to continue improve your design until the \"judgment day\", since the URL you have submitted will not change ;-)\n",
     "\n",
-    "Check [this article](https://docs.docker.com/engine/reference/commandline/push/) for more details about docker push.\n",
+    "## Quiz question 3:\n",
     "\n",
-    "## Quizz Question 2\n",
-    "\n",
-    "What is the URL of your container image repository on Docker: `Your response goes here`\n",
-    "\n",
-    "# Step 5: Make your application run in a Kubernetes environement\n",
-    "\n",
-    "This is the final step of the challenge. We will ask you to use the containerized version of your application in a Kubernetes environement managed by HPE Container Platform. In order to do this we will ask you to create a resource file (in YAML) that will create the necessary Kubernetes artifacts to run the Docker image of your application in our K8S cluster. \n",
-    "\n",
-    "Follow the instructions of the \"Introduction to the HPE Container Platform REST API\" notebook to \n",
-    "\n",
-    "1. Login to HPE CP \n",
-    "2. Retrieve a valid kubeconfig file\n",
-    "3. Define your KUBECONFIG environment variable \n",
-    "4. Use kubectl manage your K8S Cluster\n",
-    "5. Create a my-app.yaml file which declares a **deployment** and a **service** for your application container image\n",
-    "\n",
-    "Another hint for achieveing this is to try to first get your application to run in the K8S Cluster using `kubectl run -i -t` then use `kubectl get pod -o yaml` to extract the corresponding YAML file. Make sure you use unique names for artifacts so it doesn't conflict with other challengers (for example by appending your name).\n",
-    "\n",
-    "Make sure your YAML file is committed to the repo as this is going to be the nost important part of your response (together with responses to the Quizz Questions)\n",
-    "\n",
-    "Once your application runs in a K8S pod, connect to it over its public address. Follow carefully the instructions of the \"Introduction to the HPE Container Platform REST API\" workshop to find out the external IP/port number of your running application. \n",
-    "\n",
-    "## Quizz Question 3\n",
-    "\n",
-    "What is the URL of your pod on the public network: `Your response goes here`\n",
-    "\n",
-    "All done? Well done! It's now time to submit your reponse.\n",
-    "\n",
-    "## Submitting your response \n",
-    "\n",
-    "In order to submit your response to this challenge, we will ask you to use GitHub to return the modified version of the Jupyter Notebook.\n",
-    "\n",
-    "### Commit your changes to local repo\n",
-    "\n",
-    "Using the Launcher->Terminal session, commit changes locally \n",
-    "\n",
-    "### Push your changes to your GitHub account\n",
-    "\n",
-    "Push your change back to your Github account. \n",
-    "\n",
-    "### From your repo, submit a pull request to Challenge repo\n",
-    "\n",
-    "It's now time to submit your response back to the HPE Discover Challenge Repo. To do so, we ask you to submit a Pull Request (PR) from your GitHub account. Make sure an email is provided in the description of the PR so we can find you.\n",
-    "\n",
-    "## Wait for jury and/or try another challenge\n",
-    "\n",
-    "We will select a winner per Challenge. Stay tuned for the announcement at the end of HPE Discover Virtual Experience. There will also be a drawing amongst the ones completing all of our challenges, so... back to work! :-)\n",
-    "\n",
-    "# Congratulations for completing this Challenge!\n"
+    "What is the URL of your application on Netlifly?"
    ]
   },
   {
@@ -144,7 +89,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Your response goes here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finished? Well done! It's now time to submit your reponse.\n",
+    "\n",
+    "# Submitting your response \n",
+    "\n",
+    "In order to hand in your response to this challenge, we will ask you to use GitHub to submit the modified version of the Jupyter Notebook.\n",
+    "Follow instructions from the [Hack Shack Workshop: Git 101](../WKSHP-GIT101/1-WKSHP-GIT-Basics.ipynb) notebook if you need help.\n",
+    "\n",
+    "Submitting your response to the challenge will be done by submitting your edited challenge notebook (in some cases there might be additional edited files in the repo). When you are ready, we will ask you to leverage GitHub again and do the following:\n",
+    "\n",
+    "- Step 1: Commit changes in your Jupyter environment  (again using your Launcher terminal window)\n",
+    "- Step 2: Push changes to your repo  (still using your Launcher terminal window)\n",
+    "- Step 3: Open a Pull Request (PR) on our original repo. Make sure you provide an email in the description of the PR so we can contact you if your submission has been chosen. (This step is done from your GitHub account).\n",
+    "\n",
+    "![Open PR](Pictures/NewPullRequest.png)\n",
+    "\n",
+    "You should submit your response within the 4-hour time slot. We will reset all the Jupyter accounts right after the time is up, so make sure you have at least committed and pushed your changes back to your repo prior to that. You will then have more time to submit your PR.\n",
+    "\n",
+    "> Note: Use the [GIT101 notebook](./WKSHP-GIT101/1-WKSHP-GIT-Basics.ipynb) if you need assistance with these steps\n",
+    "\n",
+    "# Looking for help?\n",
+    "\n",
+    "Don't hesitate to refer back to the notebooks in your Jupyter accounts for help in answering questions that come up in the challenge. We have set up a Slack channel in the HPE DEV Slack Workspace. Feel free to [join the workspace](https://slack.hpedev.io/) then [start asking questions there](https://hpedev.slack.com/archives/C015CLE2QTT). We will be around to help you.\n",
+    "\n",
+    "Finally, in case of a real emergency, you can contact the [HPEDEV Team](mailto:hpedev.hackshack@hpe.com).\n",
+    "\n",
+    "Please note that during the period of June 30th, until July 17th the Slack channel will be opened 24x7, with monitoring from the HPE DEV Team from 9AM-6PM CET.\n",
+    "\n",
+    "# Providing feedback\n",
+    "\n",
+    "We would love to get feedback about your experience with the Hack Shack Challenges, so please take a moment to fill out that [short survey](https://forms.office.com/Pages/ResponsePage.aspx?id=YSBbEGm2MUuSrCTTBNGV3KHzFdd987lBoQATWJq45DdUNEVQTzdQV1NZM1MxNVVDMDRPRlFGUTlaQi4u) for us:\n",
+    "\n",
+    "# Challenge rewards\n",
+    "\n",
+    "We will select and reward the best response per challenge subject at the end of the HPE Discover Virtual Experience Challenges period. In addition to this, we will have a drawing amongst all the challengers who participated in all four challenges and also reward this super-challenger. \n",
+    "\n",
+    "[Review the terms & conditions](https://hackshack.hpedev.io/challengetermsconditions)\n"
+   ]
   }
  ],
  "metadata": {
