--- a/GrommetChallenge.ipynb
+++ b/GrommetChallenge.ipynb
@@ -13,8 +13,8 @@
     "\n",
     "We recommend you attend the following Discover Hack Shack workshops before attempting this challenge:\n",
     "\n",
-    "1. [Hack Shack Workshop: Git 101](../WKSHP-GIT101/0-ReadmeFirst.ipynb)\n",
-    "2. [Hack Shack Workshop: Streamline app development with open source Grommet](../WKSHP-Grommet/0-ReadmeFirst.ipynb)\n",
+    "1. [Hack Shack Workshop: Git 101](../../WKSHP-GIT101/0-ReadmeFirst.ipynb)\n",
+    "2. [Hack Shack Workshop: Streamline app development with open source Grommet](../../WKSHP-Grommet/0-ReadmeFirst.ipynb)\n",
     "\n",
     "Also, make sure you leverage the notebooks provided in your Jupyter account environment as reference material.\n",
     "\n",
