--- a/GrommetChallenge.ipynb
+++ b/GrommetChallenge.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "https://designer.grommet.io"
+    "# Your response goes here"
    ]
   },
   {
